--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <!-- stylesheet for this Document is not working ! I don't know why . so i had to use internel css -->
     <style>
         body{
-            background: url("https://mahtamun-hoque-fahim/github.io/img-source/backgroundimage.jpg");
+            background: url("https://mahtamun-hoque-fahim/github.io/website/backgroundimage.jpg");
             background-size: 1600px 900px;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/322c2c2e6d.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <img id="pic-rcy" src="https://mahtamun-hoque-fahim/github.io/img-source/programmer.jpg" alt="me">
+  <img id="pic-rcy" src="https://mahtamun-hoque-fahim/github.io/website/programmer.jpg" alt="me">
   <p id="Headorname">Mahtamun Hoque Fahim</p>
   <!-- social icons -->
          <!-- Have to put on jumbotron -->
